--- a/public/css/style.less
+++ b/public/css/style.less
@@ -27,6 +27,10 @@ a {
   color: #00B7FF;
 }
 
+div.main_container {
+  margin-top: 40px;
+}
+
 
 
 /**********************************************
@@ -35,7 +39,6 @@ a {
 div#task_container {
 
   form#add_task_form  {
-    margin-top: 40px;
     padding: 20px;
     background-color: @extra_light_grey;
     .rounded(10px);
@@ -64,4 +67,15 @@ div#task_container {
     }
   }
 
+}
+
+
+/**********************************************
+*                 4- About                    *
+**********************************************/
+#about_container {
+  p {
+    margin: 60px 0px;
+    font-size: 16px;
+  }
 }
