--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -28,25 +28,23 @@
   <body>
 
 
-  <script>
+<script>
+  $(document).ready(function() {
 
-      $(document).ready(function() {
+    loadTasks();
 
-        loadTasks();
+    $('#add_task_form').submit(function() {
+        // retrieve the data from the form
+        var author = $('#author').val();
+        var title = $('#title').val();
+        var taskUrl = $('#task_url').val();
 
-        $('#add_task_form').submit(function() {
-            // retrieve the data from the form
-            var author = $('#author').val();
-            var title = $('#title').val();
-            var taskUrl = $('#task_url').val();
+        // save the task
+        saveTask(author, title, taskUrl);
 
-            // save the task
-            saveTask(author, title, taskUrl);
-
-            return false;
-          });
+        return false;
       });
-
+  });
 </script>
 
       <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
@@ -58,7 +56,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#"><b>AnyWatch</b></a>
+                <a class="navbar-brand" href="/tasks"><b>AnyWatch</b></a>
 
             </div>
             <div class="collapse navbar-collapse">
@@ -67,7 +65,7 @@
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li><a href="#">You are connected as Guillaume</a></li>
-                    <li><a href="#">More about AnyWatch</a></li>
+                    <li><a href="/about">More about AnyWatch</a></li>
                 </ul>
             </div><!--/.nav-collapse -->
         </div>
@@ -75,7 +73,7 @@
 
 
       <!-- CONTAINER -->
-      <div id="task_container" class="container">
+      <div id="task_container" class="container main_container">
 
           <!-- add tasks form -->
           <form class="form-inline text-center" id="add_task_form" >
