--- a/views/tasks.ejs
+++ b/views/tasks.ejs
@@ -4,7 +4,7 @@
 
 <script>
     $(document).ready(function() {
-
+        console.debug('qsdzdzdzdzdzz');
         loadTasks();
 
         $('#add_task_form').submit(function() {
@@ -18,7 +18,9 @@
 
             return false;
         });
+
     });
+
 </script>
 
 
