--- a/public/css/style.less
+++ b/public/css/style.less
@@ -74,7 +74,7 @@ div#task_container {
         div#rating_container {
           margin-bottom: 15px;
           div {
-            ul#rating {
+            ul.rating {
               list-style:none;
               padding-left: 0px;
               li {
